crates/eventric-model/tests/ui/event_missing_identifier.rs
use eventric_model::event::Event;

#[derive(Event)]
#[event(tags: { item: sku })]
struct Foo {
    sku: String,
}

fn main() {}
